#7720 Multi-Select Matrix: Checkboxes and radiogroups are misaligned within a column Fixes #7720

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -161,6 +161,9 @@
   &:not(.sd-table__cell--empty):not(.sd-table__cell--actions):not(:empty) {
     min-width: calcSize(15);
   }
+  .sd-item {
+    text-align: initial;
+  }
 }
 
 .sd-table__cell--error {
