work for the https://github.com/surveyjs/private-tasks/issues/362

--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -115,7 +115,7 @@
   box-sizing: border-box;
   min-width: calcSize(6);
   text-align: center;
-  border: 2px solid transparent;;
+  border: 0px solid transparent;
   color: $foreground;
   fill: $foreground;
   font-size: calcFontSize(1);
