work for https://github.com/surveyjs/survey-creator/issues/5115

--- a/src/defaultV2-theme/blocks/sd-list.scss
+++ b/src/defaultV2-theme/blocks/sd-list.scss
@@ -8,16 +8,10 @@
 }
 
 .sd-list__item-body {
-  padding-block: calcSize(1.5);
+  padding-block: calcSize(1.25);
   border-radius: calcCornerRadius(1);
   font-size: calcFontSize(1);
   line-height: calcLineHeight(1.5);
-}
 
-.sd-list__item.sd-list__item--focused:not(.sd-list__item--selected) {
-  .sd-list__item-body {
-    padding-block: calcSize(1.25);
-  }
-
-  outline: none;
+  // transition: border-color $transition-duration;
 }
