--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -42,10 +42,13 @@
   width: 100%;
   align-items: center;
   box-sizing: border-box;
-  // padding: calcSize(1) calcSize(8) calcSize(1) calcSize(2);
-  padding-block: calcSize(1);
-  padding-inline-end: calcSize(8);
-  padding-inline-start: calcSize(2);
+  padding-block: calcSize(0.75);
+  padding-inline-end: calcSize(7.75);
+  padding-inline-start: calcSize(1.75);
+  border: calcSize(0.25) solid transparent;
+  border-radius: calcCornerRadius(1);
+  outline: none;
+
   color: $font-questiontitle-color;
   font-weight: normal;
   font-size: calcFontSize(1);
@@ -60,16 +63,7 @@
 .sv-list__item.sv-list__item--focused:not(.sv-list__item--selected) {
   .sv-list__item-body {
     @include borderLight;
-    padding-block: calcSize(0.75);
-    padding-inline-end: calcSize(7.75);
-    padding-inline-start: calcSize(1.75);
   }
-
-  .sv-string-viewer {
-    margin-inline-start: calcSize(-0.25);
-  }
-
-  outline: none;
 }
 
 .sv-list__item:hover,
