#7746 Dynamic Matrix: `alternateRows` doesn't work Fixes #7746

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -117,7 +117,7 @@
 
     .sd-table__row:nth-of-type(odd) {
 
-      &>td.sd-table__cell,
+      &>td.sd-table__cell:not(.sd-table__cell--actions),
       td:first-of-type {
         border-top-color: $background-dim-light;
         border-bottom-color: $background-dim-light;
