--- a/packages/survey-angular-ui/src/popup.survey.component.html
+++ b/packages/survey-angular-ui/src/popup.survey.component.html
@@ -6,7 +6,8 @@
       </div>
       <div [class]="popup.cssHeaderButtonsContainer">
         <div *ngIf="popup.allowFullScreen" [class]="popup.cssHeaderFullScreenButton" (click)="popup.toggleFullScreen()">
-          <svg [iconName]="'icon-full-screen_16x16'" [size]="16" sv-ng-svg-icon></svg>
+          <svg *ngIf="popup.isFullScreen" [iconName]="'icon-back-to-panel_16x16'" [size]="16" sv-ng-svg-icon></svg>
+          <svg *ngIf="!popup.isFullScreen" [iconName]="'icon-full-screen_16x16'" [size]="16" sv-ng-svg-icon></svg>
         </div>
 
         <div [class]="popup.cssHeaderCollapseButton" (click)="popup.changeExpandCollapse()">
