work for https://github.com/surveyjs/survey-creator/issues/5115 fix text aligment

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -181,6 +181,10 @@
       padding-inline-start: calcSize(1.75);
     }
   }
+
+  .sv-list__item span {
+    margin-inline-start: calcSize(-0.25);
+  }
 }
 
 [dir="rtl"],
