--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -67,6 +67,10 @@
     padding-inline-end: calcSize(7.75);
     padding-inline-start: calcSize(1.75);
   }
+
+  .sv-string-viewer {
+    margin-inline-start: calcSize(-0.25);
+  }
 }
 
 .sv-list__item:hover,
