--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -288,6 +288,7 @@
   background: transparent;
   border-radius: calcSize(2);
   padding: calcSize(1);
+  transition: background $transition-duration;
 
   svg {
     @include useEditorFontSize;
@@ -295,6 +296,7 @@
     width: multiply(1, $font-editorfont-size);
     height: multiply(1, $font-editorfont-size);
     fill: $font-questiondescription-color;
+    transition: fill $transition-duration;
   }
 
   &:hover,
