--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -105,7 +105,6 @@
 .sd-rating__item {
   position: relative;
   background: $question-background;
-  box-shadow: $shadow-small;
   border-radius: calcSize(12.5);
   white-space: nowrap;
   padding: calcSize(0.5) calcSize(2.5);
@@ -116,10 +115,12 @@
   box-sizing: border-box;
   min-width: calcSize(6);
   text-align: center;
-  border: none;
+  border: 0px solid transparent;
   color: $foreground;
   fill: $foreground;
   font-size: calcFontSize(1);
+  box-shadow: $shadow-small, inset 0 0 0 0px $background;
+  transition: border $transition-duration, box-shadow $transition-duration, background-color $transition-duration;
 }
 
 .sd-rating__item--fixed-size {
@@ -172,7 +173,7 @@ legend+sv-ng-rating-item+.sd-rating__item {
 }
 
 .sd-rating__item--selected:focus-within {
-  box-shadow: inset 0 0 0 2px $background;
+  box-shadow: $shadow-small-reset, inset 0 0 0 2px $background;
 }
 
 .sd-rating__item-smiley {
@@ -186,6 +187,8 @@ legend+sv-ng-rating-item+.sd-rating__item {
   border: 2px solid $border;
   color: $foreground;
   fill: $border;
+  box-shadow: $shadow-small-reset, inset 0 0 0 0px $background;
+  transition: border $transition-duration, box-shadow $transition-duration, background-color $transition-duration;
 
   svg {
     display: block;
@@ -212,6 +215,10 @@ legend+sv-ng-rating-item+.sd-rating__item {
 legend+.sd-rating__item-smiley,
 legend+sv-ng-rating-item+.sd-rating__item-smiley {
   margin-inline-start: 2px;
+}
+
+.sd-rating__item-smiley--scale-colored {
+  transition: border $transition-duration, box-shadow $transition-duration, opacity $transition-duration, background-color $transition-duration;
 }
 
 .sd-rating__item-smiley--error {
@@ -250,7 +257,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 }
 
 .sd-rating__item-smiley--selected:focus-within {
-  box-shadow: inset 0 0 0 2px $background;
+  box-shadow: $shadow-small-reset, inset 0 0 0 2px $background;
 }
 
 .sd-rating__item-smiley--scale-colored:not(.sd-rating__item-smiley--selected) {
@@ -288,14 +295,20 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
   svg {
     stroke: $border;
-    fill: none;
+    fill: transparent;
     width: calcSize(6);
     height: calcSize(6);
     display: block;
+    position: absolute;
+    transition: stroke $transition-duration, opacity $transition-duration, fill $transition-duration;
+  }
+
+  .sv-star {
+    opacity: 1;
   }
 
   .sv-star-2 {
-    display: none;
+    opacity: 0;
   }
 }
 
@@ -311,7 +324,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
 .sd-rating__item-star--selected {
   svg {
-    stroke: none;
+    stroke: transparent;
     fill: $primary;
   }
 }
@@ -342,13 +355,13 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 .sd-rating__item-star:focus-within {
   svg {
     stroke: $primary;
-    fill: none;
+    fill: transparent;
   }
 }
 
 .sd-rating__item-star--unhighlighted {
   svg {
-    stroke: none;
+    stroke: transparent;
     fill: $border;
   }
 }
@@ -374,11 +387,11 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
   }
 
   .sv-star {
-    display: none;
+    opacity: 0;
   }
 
   .sv-star-2 {
-    display: block;
+    opacity: 1;
   }
 }
 
@@ -392,6 +405,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
   display: inline-block;
   border: 2px solid transparent;
   box-sizing: border-box;
+  transition: color $transition-duration;
 
   &.sd-rating__min-text,
   &.sd-rating__max-text {
