--- a/packages/survey-angular-ui/src/components/file/choose-file.component.html
+++ b/packages/survey-angular-ui/src/components/file/choose-file.component.html
@@ -1,6 +1,7 @@
 <ng-template #template>
     <label tabindex="0" [class]="question.getChooseFileCss()"
-        [attr.for]="question.inputId" [attr.aria-label]="question.chooseButtonText" [key2click]>
+        [attr.for]="question.inputId" [attr.aria-label]="question.chooseButtonText" [key2click]
+        (click)="question.chooseFile()">
         <svg *ngIf="question.cssClasses.chooseFileIconId" [title]="question.chooseButtonText"
             [iconName]="question.cssClasses.chooseFileIconId" [size]="'auto'" sv-ng-svg-icon></svg>
         <span>{{ question.chooseButtonText }}</span>
