--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -59,8 +59,11 @@
 }
 
 .sv-list__item.sv-list__item--focused:not(.sv-list__item--selected) {
+  outline: none;
+
   .sv-list__item-body {
     @include borderLight;
+    border-radius: calcCornerRadius(1);
     padding-block: calcSize(0.75);
     padding-inline-end: calcSize(7.75);
     padding-inline-start: calcSize(1.75);
@@ -69,8 +72,6 @@
   .sv-string-viewer {
     margin-inline-start: calcSize(-0.25);
   }
-
-  outline: none;
 }
 
 .sv-list__item:hover,
