--- a/src/defaultV2-theme/blocks/mixins.scss
+++ b/src/defaultV2-theme/blocks/mixins.scss
@@ -50,8 +50,40 @@
   padding-inline-start: 0;
   padding-inline-end: 0;
 
-  &+span {
+  & + span {
     float: none;
     width: auto;
+  }
+}
+
+@mixin scrollRules {
+  &,
+  * {
+    @-moz-document url-prefix() {
+      scrollbar-width: thin;
+      scrollbar-color: $border transparent;
+    }
+
+    &::-webkit-scrollbar {
+      width: 12px;
+      height: 12px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border: 4px solid rgba(0, 0, 0, 0);
+      background-clip: padding-box;
+      border-radius: 32px;
+      background-color: $border;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      border: 2px solid rgba(0, 0, 0, 0);
+      background-color: $foreground-light;
+    }
   }
 }
