--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -161,6 +161,7 @@
   &:not(.sd-table__cell--empty):not(.sd-table__cell--actions):not(:empty) {
     min-width: calcSize(15);
   }
+
   .sd-item {
     text-align: initial;
   }
@@ -707,6 +708,15 @@
 }
 
 .sd-table__cell--footer {
+  .sd-table__question-wrapper--expression {
+    .sd-expression {
+      padding: calcSize(1.5) calcSize(2);
+      border-bottom: 1px solid $border-light;
+      font-size: calcFontSize(1);
+      font-weight: 600;
+      line-height: calcSize(3);
+    }
+  }
 
   .sd-table__question-wrapper--left {
     text-align: start;
