--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -26,6 +26,7 @@
     right: calcSize(2);
     bottom: calcSize(2);
     max-height: 100%;
+    height: initial;
     width: initial !important;
     max-width: initial!important;
 }
