--- a/packages/survey-angular-ui/src/questions/matrixdropdowncell.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixdropdowncell.component.html
@@ -8,7 +8,7 @@
       <ng-template [component]="{ name: panelComponentName, data: panelComponentData }"></ng-template>
     </ng-container>
     <div *ngIf="cell.isErrorsCell && cell.question?.hasVisibleErrors" [element]="cell.question" sv-ng-errors></div>
-    <div *ngIf="cell.hasQuestion" [class]="question.cssClasses.cellQuestionWrapper"
+    <div *ngIf="cell.hasQuestion" [class]="cell.cellQuestionWrapperClassName"
       [visible]="cell.question.isVisible">
       <ng-container *ngIf="!cell.isChoice && cell.question.isDefaultRendering()">
         <ng-template
