--- a/src/knockout/templates/question-text.html
+++ b/src/knockout/templates/question-text.html
@@ -13,7 +13,7 @@
   </div>
   <!--/ko-->
   <!--ko if: question.isReadOnlyRenderDiv() -->
-  <div data-bind="text: question.value"></div>
+  <div data-bind="text: question.koReadOnlyValue"></div>
   <!--/ko-->
 </script>
 <script type="text/html" id="survey-question-text-input">
