work for the https://github.com/surveyjs/survey-library/issues/7518

--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -34,7 +34,7 @@
 
 .sv_window_header {
     display: flex;
-    justify-content: flext-end;
+    justify-content: flex-end;
 }
 
 .sv_window_content {
