Revert "PR: KO: Survey doesn't have title and description if loaded via Surve…"
This reverts commit d4f7794c68327a40e27fef2c01b241114819948d.

--- a/src/knockout/templates/header.html
+++ b/src/knockout/templates/header.html
@@ -1,5 +1,5 @@
 ﻿<script type="text/html" id="survey-header">
-  <!-- ko if: koRenderedHasHeader -->
+  <!-- ko if: renderedHasHeader -->
 <div data-bind="css: css.header">
   <!-- ko if: isLogoBefore -->
   <!-- ko component: { name: getElementWrapperComponentName($data, 'logo-image'), params: getElementWrapperComponentData($data, 'logo-image') } -->
