--- a/src/knockout/components/header/index.html
+++ b/src/knockout/components/header/index.html
@@ -1,4 +1,4 @@
-<!-- ko if: (survey.headerView === 'advanced' && survey.renderedHasHeader) -->
+<!-- ko if: (survey.headerView === 'advanced') -->
 <div data-bind="css: model.headerClasses, style: { height: model.renderedHeight }">
   <!-- ko if: !!model.backgroundImage -->
   <div data-bind="style: model.backgroundImageStyle, css: model.backgroundImageClasses"></div>
