work for the https://github.com/surveyjs/survey-library/issues/7547 (spike2)

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -12,23 +12,29 @@
   position: relative;
   height: calcSize(6);
   opacity: 1;
+  transition: height 1000ms, opacity 1000ms;
 }
 
-.sv-ranking-item--animate-adding {
-  animation: sv-animate-adding-keyframes 5000ms;
+.sv-ranking-item--animate-item-removing {
+  height: 0px;
+  opacity: 0;
 }
 
-@keyframes sv-animate-adding-keyframes {
-  0% {
-    height: 0px;
-    opacity: 0;
-  }
+// .sv-ranking-item--animate-item-adding {
+//   animation: sv-animate-item-adding-keyframes 5000ms;
+// }
 
-  100% {
-    height: calcSize(6);
-    opacity: 1;
-  }
-}
+// @keyframes sv-animate-item-adding-keyframes {
+//   0% {
+//     height: 0px;
+//     opacity: 0;
+//   }
+
+//   100% {
+//     height: calcSize(6);
+//     opacity: 1;
+//   }
+// }
 
 .sv-ranking-item:focus .sv-ranking-item__icon--hover {
   visibility: hidden;
