work for https://github.com/surveyjs/survey-library/issues/7692

--- a/src/common-styles/window.scss
+++ b/src/common-styles/window.scss
@@ -16,6 +16,7 @@
     @include scrollRules;
     box-sizing: border-box;
     background: $background-dim;
+    width: calc(100% - calcSize(4)) !important;
 }
 
 .sv_window_root-content {
