work for the https://github.com/surveyjs/survey-creator/issues/5193

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -296,6 +296,7 @@
   height: 100%;
   padding-top: calcSize(0.5);
   padding-bottom: calcSize(0.5);
+  box-sizing: border-box;
 }
 
 .sv-ranking__container {
