--- a/src/knockout/templates/question-boolean.html
+++ b/src/knockout/templates/question-boolean.html
@@ -6,8 +6,8 @@
         data-bind="value: question.booleanValue, css: question.cssClasses.control, attr: {name: question.name, id: question.inputId, 'role': question.a11y_input_ariaRole, 'aria-required': question.a11y_input_ariaRequired, 'aria-labelledby': question.a11y_input_ariaLabelledBy, 'aria-invalid': question.a11y_input_ariaInvalid, 'aria-describedby': question.a11y_input_ariaDescribedBy, 'aria-label': question.a11y_input_ariaLabel}, checked: question.booleanValue, surveyProp: {indeterminate: question.isIndeterminate}, enable: !question.isInputReadOnly"
       />
       <div data-bind="css: question.cssClasses.sliderGhost, click: onFalseLabelClick">
-        <span data-bind="css: question.getLabelCss(false)">
-          <!-- ko template: { name: 'survey-string', data: locLabelFalse } --><!-- /ko -->
+        <span data-bind="css: question.getLabelCss(exchangeUIButtons)">
+          <!-- ko template: { name: 'survey-string', data: locLabelLeft } --><!-- /ko -->
         </span>
       </div>
       <div data-bind="css: question.cssClasses.switch, click: onSwitchClick">
@@ -20,8 +20,8 @@
         </span>
       </div>
       <div data-bind="css: question.cssClasses.sliderGhost, click: onTrueLabelClick">
-        <span data-bind="css: question.getLabelCss(true)">
-          <!-- ko template: { name: 'survey-string', data: locLabelTrue } --><!-- /ko -->
+        <span data-bind="css: question.getLabelCss(!exchangeUIButtons)">
+          <!-- ko template: { name: 'survey-string', data: locLabelRight } --><!-- /ko -->
         </span>
       </div>
     </label>
