--- a/src/knockout/templates/question-boolean.html
+++ b/src/knockout/templates/question-boolean.html
@@ -6,7 +6,7 @@
         data-bind="value: question.booleanValue, css: question.cssClasses.control, attr: {name: question.name, id: question.inputId, 'role': question.a11y_input_ariaRole, 'aria-required': question.a11y_input_ariaRequired, 'aria-labelledby': question.a11y_input_ariaLabelledBy, 'aria-invalid': question.a11y_input_ariaInvalid, 'aria-describedby': question.a11y_input_ariaDescribedBy, 'aria-label': question.a11y_input_ariaLabel}, checked: question.booleanValue, surveyProp: {indeterminate: question.isIndeterminate}, enable: !question.isInputReadOnly"
       />
       <div data-bind="css: question.cssClasses.sliderGhost, click: onFalseLabelClick">
-        <span data-bind="css: question.getLabelCss(exchangeUIButtons)">
+        <span data-bind="css: question.getLabelCss(swapOrder)">
           <!-- ko template: { name: 'survey-string', data: locLabelLeft } --><!-- /ko -->
         </span>
       </div>
@@ -20,7 +20,7 @@
         </span>
       </div>
       <div data-bind="css: question.cssClasses.sliderGhost, click: onTrueLabelClick">
-        <span data-bind="css: question.getLabelCss(!exchangeUIButtons)">
+        <span data-bind="css: question.getLabelCss(!swapOrder)">
           <!-- ko template: { name: 'survey-string', data: locLabelRight } --><!-- /ko -->
         </span>
       </div>
