string viewer new lines https://github.com/surveyjs/survey-creator/issues/5185

--- a/src/knockout/components/string-viewer/string-viewer.html
+++ b/src/knockout/components/string-viewer/string-viewer.html
@@ -1,6 +1,6 @@
 <!-- ko ifnot: locString.koHasHtml -->
-<span class="sv-string-viewer" data-bind="text: locString.koRenderedHtml"></span>
+<span class="sv-string-viewer" data-bind="text: locString.koRenderedHtml, css: {'sv-string-viewer--multiline': locString.allowLineBreaks}"></span>
 <!-- /ko -->
 <!-- ko if: locString.koHasHtml -->
-<span class="sv-string-viewer" data-bind="html: locString.koRenderedHtml"></span>
+<span class="sv-string-viewer" data-bind="html: locString.koRenderedHtml, css: {'sv-string-viewer--multiline': locString.allowLineBreaks}"></span>
 <!-- /ko -->
