all platforms, markup and screenshot test https://github.com/surveyjs/survey-creator/issues/5185

--- a/src/common-styles/sv-string-viewer.scss
+++ b/src/common-styles/sv-string-viewer.scss
@@ -1,5 +1,5 @@
 .sv-string-viewer {
-    .sv-string-viewer--multiline {
+    &.sv-string-viewer--multiline {
         white-space: pre-wrap;
     }
 }
