--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -86,7 +86,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  position: static;
+  position: relative;
 }
 
 .sd-root-modern--mobile {
