--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -130,7 +130,7 @@
 }
 
 .sd-file__choose-btn--icon {
-  &>span {
+  & > span {
     display: none;
   }
 }
@@ -173,7 +173,6 @@
   inset-inline-end: calc(multiply(1.5, $font-editorfont-size) + calcSize(5));
 }
 
-
 .sd-file__list {
   display: flex;
   position: relative;
@@ -204,7 +203,7 @@
 @keyframes file-page-to-right {
   from {
     opacity: 1;
-    left: 0
+    left: 0;
   }
 
   to {
@@ -213,11 +212,10 @@
   }
 }
 
-
 @keyframes file-page-from-right {
   from {
     opacity: 0;
-    left: 100%
+    left: 100%;
   }
 
   to {
@@ -229,7 +227,7 @@
 @keyframes file-page-from-left {
   from {
     opacity: 0;
-    left: -100%
+    left: -100%;
   }
 
   to {
@@ -241,7 +239,7 @@
 @keyframes file-page-to-left {
   from {
     opacity: 1;
-    left: 0
+    left: 0;
   }
 
   to {
@@ -274,7 +272,6 @@
   animation-name: file-page-from-left;
 }
 
-
 .sd-file__preview {
   position: relative;
   display: flex;
@@ -291,8 +288,8 @@
     height: 90px;
   }
 
-  img:hover+.sd-file__remove-file-button,
-  svg:hover+.sd-file__remove-file-button,
+  img:hover + .sd-file__remove-file-button,
+  svg:hover + .sd-file__remove-file-button,
   .sd-file__remove-file-button:hover {
     opacity: 1;
   }
@@ -363,7 +360,7 @@
 }
 
 .sd-file--single {
-  img:hover+.sd-file__remove-file-button {
+  img:hover + .sd-file__remove-file-button {
     display: none;
   }
 }
@@ -371,6 +368,9 @@
 .sd-file--single-image {
   height: calc(36 * #{$base-unit});
 
+  .sd-file__page {
+    height: 100%;
+  }
   .sd-file__preview {
     width: 100%;
     margin: 0;
@@ -420,12 +420,11 @@
   background: transparent;
 }
 
-.sd-file>input:focus+.sd-file__decorator .sd-file__choose-btn {
+.sd-file > input:focus + .sd-file__decorator .sd-file__choose-btn {
   &.sd-file__choose-btn--icon {
     use {
       fill: $primary;
     }
-
   }
 
   &:not(.sd-file__choose-btn--icon) {
