--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -66,7 +66,11 @@
   font-weight: 600;
   margin-left: 0%;
   transform: translateX(0);
-  white-space: nowrap;
+  .sv-string-viewer {
+    &.sv-string-viewer--multiline {
+        white-space: nowrap;
+    }
+  }
   z-index: 2;
 }
 
