PR: Themes Tab - The 'Yes, reset the theme' button appears beyond the popup window's boundaries (#7879)
* work for the https://github.com/surveyjs/survey-creator/issues/5228

* work for the https://github.com/surveyjs/survey-creator/issues/5228

* work for the https://github.com/surveyjs/survey-creator/issues/5228

* work for the https://github.com/surveyjs/survey-creator/issues/5228

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -86,11 +86,15 @@ sv-popup {
 
   .sv-popup__body-content {
     border-radius: calcSize(1);
+    max-width: min-content;
+    align-items: flex-end;
+    min-width: 452px;
   }
 
   .sv-popup__body-header {
     color: $font-editorfont-color;
     margin-bottom: 0;
+    align-self: self-start;
 
     /* UI/Default */
     font-family: $font-family;
@@ -107,6 +111,7 @@ sv-popup {
 
   .sv-popup__body-footer {
     padding-bottom: 0;
+    max-width: max-content;
 
     .sv-action-bar {
       gap: calcSize(2);
