work for the https://github.com/surveyjs/survey-library/issues/7881

--- a/src/knockout/templates/questioncontent.html
+++ b/src/knockout/templates/questioncontent.html
@@ -27,7 +27,7 @@
     <!-- /ko -->
   <!-- /ko -->
   <!-- ko if: question.hasDescriptionUnderInput -->
-  <div data-bind="css: cssClasses.descriptionUnderInput">
+  <div data-bind="css: cssClasses.descriptionUnderInput, attr: {'id': question.ariaDescriptionId}">
     <!-- ko template: { name: 'survey-string', data: locDescription } -->
     <!-- /ko -->
   </div>
