--- a/packages/survey-angular-ui/src/components/renderAs/boolean-checkbox/boolean-checkbox.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/boolean-checkbox/boolean-checkbox.component.html
@@ -18,6 +18,6 @@
         <sv-ng-element-title-actions [element]="model"></sv-ng-element-title-actions>
       </span>
     </label>
-    <div *ngIf="model.canRenderLabelDescription" [class]="model.cssDescription" [id]="model.ariaDescriptionId" [model]="model.locDescription" sv-ng-string></div>
+    <div *ngIf="model.canRenderLabelDescription" [class]="model.cssDescription" [attr.id]="model.ariaDescriptionId" [model]="model.locDescription" sv-ng-string></div>
   </div>
 </div>
