--- a/packages/survey-angular-ui/src/question.component.html
+++ b/packages/survey-angular-ui/src/question.component.html
@@ -11,7 +11,7 @@
           <sv-ng-comment [question]="model"></sv-ng-comment>
         </div>
         <div *ngIf="model.showErrorOnBottom && model.hasVisibleErrors" [element]="model" sv-ng-errors></div>
-        <div *ngIf="model.hasDescriptionUnderInput" [class]="model.cssDescription" [id]="model.ariaDescriptionId" [model]="model.locDescription" sv-ng-string></div>
+        <div *ngIf="model.hasDescriptionUnderInput" [class]="model.cssDescription" [attr.id]="model.ariaDescriptionId" [model]="model.locDescription" sv-ng-string></div>
       </div>
     </ng-template>
     <div [element]="model" *ngIf="model.hasTitleOnBottom" sv-ng-element-header></div>
