work for the https://github.com/surveyjs/survey-creator/issues/5250

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -82,6 +82,7 @@ sv-popup {
 
   .sv-popup__container {
     border-radius: calcSize(1);
+    width: min-content !important;
   }
 
   .sv-popup__body-content {
