In static width mode, choices with a long text overlaps a question's area #7871

--- a/src/defaultV2-theme/blocks/sd-item.scss
+++ b/src/defaultV2-theme/blocks/sd-item.scss
@@ -53,6 +53,14 @@
   white-space: normal;
   width: 100%;
   text-align: left;
+  min-width: 0;
+
+  .sv-string-viewer {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+  }
 }
 
 .sd-item--disabled .sd-item__control-label {
